{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 39,
  "lineage": "de0a3624-37c0-6bf0-e520-2768e392d99f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "e-learning-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d26d9b3d72ce608",
            "domain": "vpc",
            "id": "eipalloc-06d26d9b3d72ce608",
            "network_border_group": "eu-west-2",
            "public_dns": "ec2-18-135-237-135.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.135.237.135",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "e-learning-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:internet-gateway/igw-0574d2ba35b60cdc7",
            "id": "igw-0574d2ba35b60cdc7",
            "owner_id": "492367642859",
            "tags": {
              "Name": "e-learning-igw-staging"
            },
            "tags_all": {
              "Name": "e-learning-igw-staging"
            },
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "e-learning-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/65d688cb4bd8e763",
            "arn_suffix": "app/e-learning-alb/65d688cb4bd8e763",
            "desync_mitigation_mode": "defensive",
            "dns_name": "e-learning-alb-899517537.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/65d688cb4bd8e763",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "e-learning-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-003bdd590d9a8bb8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0eef652680e122a20"
              },
              {
                "subnet_id": "subnet-0f8446e7894a35058"
              }
            ],
            "subnets": [
              "subnet-0eef652680e122a20",
              "subnet-0f8446e7894a35058"
            ],
            "tags": {
              "Environment": "production"
            },
            "tags_all": {
              "Environment": "production"
            },
            "vpc_id": "vpc-0caf4463bb268b7f6",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-http-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/65d688cb4bd8e763/8717f29f6d83c577",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/65d688cb4bd8e763/8717f29f6d83c577",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/65d688cb4bd8e763",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.e-learning-alb",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "e-learning-alb-https-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/65d688cb4bd8e763/67624b7ffb1c7de8",
            "certificate_arn": "arn:aws:acm:eu-west-2:492367642859:certificate/9b429d07-299f-4d44-b66d-c7008bf3cdb7",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/a3b7149da0633f7c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:listener/app/e-learning-alb/65d688cb4bd8e763/67624b7ffb1c7de8",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:loadbalancer/app/e-learning-alb/65d688cb4bd8e763",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ecs-acm-cert",
            "aws_lb.e-learning-alb",
            "aws_lb_target_group.e-learning-alb-tg",
            "aws_security_group.e-learning-alb-sg",
            "aws_subnet.e-learning-pub-sub1",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "e-learning-alb-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/a3b7149da0633f7c",
            "arn_suffix": "targetgroup/e-learning-alb-tg/a3b7149da0633f7c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:492367642859:targetgroup/e-learning-alb-tg/a3b7149da0633f7c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "e-learning-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "e-learning-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d26d9b3d72ce608",
            "connectivity_type": "public",
            "id": "nat-0622fb1fe63100bf1",
            "network_interface_id": "eni-0a50b3d67d1eafb24",
            "private_ip": "10.0.14.42",
            "public_ip": "18.135.237.135",
            "subnet_id": "subnet-0eef652680e122a20",
            "tags": {
              "Name": "gw NAT-staging"
            },
            "tags_all": {
              "Name": "gw NAT-staging"
            }
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-priv-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0d55c2dbe2892df1a",
            "id": "rtb-0d55c2dbe2892df1a",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0622fb1fe63100bf1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "e-learning-priv-rt-staging"
            },
            "tags_all": {
              "Name": "e-learning-priv-rt-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "e-learning-pub-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:route-table/rtb-0ccb40850f1669d4d",
            "id": "rtb-0ccb40850f1669d4d",
            "owner_id": "492367642859",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0574d2ba35b60cdc7",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "e-learning-pub-rt-staging"
            },
            "tags_all": {
              "Name": "e-learning-pub-rt-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f99901beacbec2c1",
            "route_table_id": "rtb-0d55c2dbe2892df1a",
            "subnet_id": "subnet-01fe41e9f9f8db405"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub1",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-priv2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0987f306f011bad10",
            "route_table_id": "rtb-0d55c2dbe2892df1a",
            "subnet_id": "subnet-0c6b327b26c0a410f"
          },
          "dependencies": [
            "aws_eip.e-learning-eip",
            "aws_internet_gateway.e-learning-igw",
            "aws_nat_gateway.e-learning-ngw",
            "aws_route_table.e-learning-priv-rt",
            "aws_subnet.e-learning-priv-sub2",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub1-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d8f63dcc12493d09",
            "route_table_id": "rtb-0ccb40850f1669d4d",
            "subnet_id": "subnet-0eef652680e122a20"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub1",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "e-learning-pub2-asso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001159e5450d1e691",
            "route_table_id": "rtb-0ccb40850f1669d4d",
            "subnet_id": "subnet-0f8446e7894a35058"
          },
          "dependencies": [
            "aws_internet_gateway.e-learning-igw",
            "aws_route_table.e-learning-pub-rt",
            "aws_subnet.e-learning-pub-sub2",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-003bdd590d9a8bb8c",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003bdd590d9a8bb8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https from anywhere",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_tls_http",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls_http-staging"
            },
            "tags_all": {
              "Name": "allow_tls_http-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "e-learning-ecs-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-0388ce8bf756ae78c",
            "description": "Allow TCP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0388ce8bf756ae78c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "TCP from alb",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-003bdd590d9a8bb8c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "e-learning-ecs-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "e-learning-ecs-sg-staging"
            },
            "tags_all": {
              "Name": "e-learning-ecs-sg-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql-rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:security-group/sg-0cec52beac6bc4cc2",
            "description": "Allows traffic only on port 5432 with ecs cluster",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cec52beac6bc4cc2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "ecs security group to db",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0388ce8bf756ae78c"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgresql-rds-sg",
            "name_prefix": "",
            "owner_id": "492367642859",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-instance-sec-group-staging"
            },
            "tags_all": {
              "Name": "db-instance-sec-group-staging"
            },
            "timeouts": null,
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.e-learning-alb-sg",
            "aws_security_group.e-learning-ecs-sg",
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-01fe41e9f9f8db405",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.16.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01fe41e9f9f8db405",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub1-staging"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub1-staging"
            },
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-priv-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0c6b327b26c0a410f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.15.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c6b327b26c0a410f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-priv-sub2-staging"
            },
            "tags_all": {
              "Name": "e-learning-priv-sub2-staging"
            },
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0eef652680e122a20",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.14.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eef652680e122a20",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub1-staging"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub1-staging"
            },
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "e-learning-pub-sub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:subnet/subnet-0f8446e7894a35058",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.17.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f8446e7894a35058",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "492367642859",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "e-learning-pub-sub2-staging"
            },
            "tags_all": {
              "Name": "e-learning-pub-sub2-staging"
            },
            "vpc_id": "vpc-0caf4463bb268b7f6"
          },
          "dependencies": [
            "aws_vpc.e-learning"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "e-learning",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:492367642859:vpc/vpc-0caf4463bb268b7f6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01a9acb01771c1b17",
            "default_route_table_id": "rtb-07e5ef2032a5d5ba5",
            "default_security_group_id": "sg-0d340cd6fcf6eee3a",
            "dhcp_options_id": "dopt-07de7887fa266f1ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0caf4463bb268b7f6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07e5ef2032a5d5ba5",
            "owner_id": "492367642859",
            "tags": {
              "Name": "e-learning-staging"
            },
            "tags_all": {
              "Name": "e-learning-staging"
            }
          }
        }
      ]
    }
  ]
}